--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
               <img src="frontend/img/Stars.png">
             </div>
             <h2 class="testimonial-text">BIKESTORE "GOES TO <br> CAMPUS UIR ...</h2>
-            <p class="testimonial-name">Alex, Programmer</p>
+            <p class="testimonial-name">Nurkawakib, Programmer</p>
             <a href="#" class="btn btn-testimonial">Read Story</a>
           </div>
         </div>
@@ -296,7 +296,7 @@
               <h5>Address</h5>
               <p>Jl. Kaharuddin Nasution No.01, <br>
                 Kecamatan Marpoyan Damai, Pekanbaru, Riau 28282 <br>
-                0822-9102-8285</p>
+                0812-7551-2930</p>
             </div>
           </div>
         </div>
